tests/expectations/compiler/statements/expr_statement_fail.out
DCE_ENABLED:
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:9:9
     |
   9 |         a + b;
     |         ^^^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:10:9
     |
  10 |         flag ? a : b;
     |         ^^^^^^^^^^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:11:9
     |
  11 |         foo.a;
     |         ^^^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:12:9
     |
  12 |         Foo {
     |         ^^^^^
  13 |             a: a,
     |             ^^^^^
  14 |         };
     |         ^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:15:9
     |
  15 |         a;
     |         ^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:16:9
     |
  16 |         1u8;
     |         ^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:17:9
     |
  17 |         -i8;
     |         ^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:18:9
     |
  18 |         1field;
     |         ^^^^^^^

DCE_DISABLED:
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:9:9
     |
   9 |         a + b;
     |         ^^^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:10:9
     |
  10 |         flag ? a : b;
     |         ^^^^^^^^^^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:11:9
     |
  11 |         foo.a;
     |         ^^^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:12:9
     |
  12 |         Foo {
     |         ^^^^^
  13 |             a: a,
     |             ^^^^^
  14 |         };
     |         ^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:15:9
     |
  15 |         a;
     |         ^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:16:9
     |
  16 |         1u8;
     |         ^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:17:9
     |
  17 |         -i8;
     |         ^^^^
Error [ETYC0372053]: An expression statement must be a function call.
    --> compiler-test:18:9
     |
  18 |         1field;
     |         ^^^^^^^
